--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
 @import "global/variables";
-@import "scss/bootstrap/bootstrap";
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import "scss/layout";
 
