--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import "global/variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "scss/layout";
+@import "scss/typography";
 
