added typography mixins

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -1,6 +1,8 @@
-$myColor: salmon;
-$myTextColor: #fff;
+$themeColor: salmon;
 
-$Heading: 'Ubuntu';
-$Body: 'Poppins';
+$Body:	Raleway;
+$bodyColor: #000;
+
+$Heading: Ubuntu;
+$headingColor: $themeColor;
 
