--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -6,6 +6,6 @@ $containerColor: #fff;
 $Body:	Raleway;
 $bodyColor: #000;
 
-$Heading: Ubuntu;
+$Heading: Gloria Hallelujah;
 $headingColor: $themeColor;
 
