--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,6 @@
-@import "global/variables";
+@import "scss/global/global";
 @import "../node_modules/bootstrap/scss/bootstrap";
-@import "scss/mixins";
 @import "scss/layout";
 @import "scss/typography";
 
+	
