--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
 
 //VARIABLES, CRAYOLA SASS, MIXINS
-
-	@import "scss/global/global";
+	@import "scss/variables";
+	@import "scss/components";
+	@import "scss/util";
 
 // BOOTSTRAP
 
