--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 @import "util/colors";
 @import "util/crayola";
 
-$themeColor: $BlazeOrange;
+$themeColor: $red;
 $primary:	$themeColor !important;
 $containerColor: #fff;
 
