--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -1,7 +1,7 @@
 //TYPOGRAPHY
 
-@import "../variables";
-@import "../util/mixins";
+@import "../variables.scss";
+@import "../util/mixins.scss";
 
 @include gwf($Heading, $Body);
 
