--- a/src/scss/util/_colors.scss
+++ b/src/scss/util/_colors.scss
@@ -1166,7 +1166,7 @@ $RipePlum:#410056;
 $Riptide:#8BE6D8;
 $RiverBed:#434C59;
 $RobRoy:#EAC674;
-$sEggBlue:#00CCCC;
+$RobinsEggBlue:#00CCCC;
 $Rock:#4D3833;
 $RockBlue:#9EB1CD;
 $RockSpray:#BA450C;
