--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,2 @@
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
-@import "scss/util/colors.scss";
-@import "scss/util/crayola.scss";
-@import "scss/util/mixins.scss";
-@import "scss/variables.scss";
-@import "scss/components/typography.scss";
-@import "scss/layout.scss";
+@import "scss/custom.scss";
+@import "../assets/bootstrap/scss/bootstrap.scss";
